--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -7,3 +7,11 @@ jobs:
       - uses: actions/checkout@v2
       - run: ls
       - run: ls -a
+  run-basic-bash:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+         chmod +x /.github/scripts/test.sh
+         /.github/scripts/test.sh
+        shell: bash
