--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -16,12 +16,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        run: |
+      - run: |
          chmod +x .github/scripts/test.sh
          .github/scripts/test.sh
         shell: bash
-      - uses: actions/checkout@v2
-        run: |
+      - run: |
           git add .
           git commit -m "generated"
           git push
