--- a/.github/workflows/example-docker.yml
+++ b/.github/workflows/example-docker.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Hello world action step
-        uses: .github/docker/
+        uses: .github/docker@v1
         id: hello
         with:
           who-to-greet: 'Mona the Octocat'
