--- a/.github/workflows/example-docker.yml
+++ b/.github/workflows/example-docker.yml
@@ -9,6 +9,8 @@ jobs:
       # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v2
+      - name: files list
+        run: ls -a
       - name: Hello world action step
         uses: .github/docker@main
         id: hello
