--- a/.github/workflows/example-docker.yml
+++ b/.github/workflows/example-docker.yml
@@ -5,17 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-      # To use this repository's private action,
-      # you must check out the repository
-      - name: Checkout
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: files list
         run: ls -a
-      - name: Hello world action step
-        uses: .github/docker@main
-        id: hello
-        with:
-          who-to-greet: 'Mona the Octocat'
-      # Use the output from the `hello` step
-      - name: Get the output time
-        run: echo "The time was ${{ steps.hello.outputs.time }}"
+      - name: Build Docker image 
+        run: docker build -t example-docker .github/docker/
+      - name: Run tests inside the container
+        run: docker run example-docker
