--- a/.github/workflows/run-remote-docker.yml
+++ b/.github/workflows/run-remote-docker.yml
@@ -1,9 +1,15 @@
-- name: Checkout 
-  uses: actions/checkout@v2 # Required to mount the Github Workspace to a volume 
-- uses: addnab/docker-run-action@v3
-  with:
-    image: docker:latest
-    shell: bash
-    run: |
-      echo "first line"
-      echo "second line"
+on: [push]
+  
+jobs:
+  run-remote-container:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout 
+      uses: actions/checkout@v2 # Required to mount the Github Workspace to a volume 
+    - uses: addnab/docker-run-action@v3
+      with:
+        image: docker:latest
+        shell: bash
+        run: |
+          echo "first line"
+          echo "second line"
