--- a/.github/workflows/run-remote-docker.yml
+++ b/.github/workflows/run-remote-docker.yml
@@ -8,7 +8,7 @@ jobs:
       uses: actions/checkout@v2 # Required to mount the Github Workspace to a volume 
     - uses: addnab/docker-run-action@v3
       with:
-        image: docker:latest
+        image: ubuntu:latest
         shell: bash
         run: |
           echo "first line"
