--- a/.github/workflows/example-docker.yml
+++ b/.github/workflows/example-docker.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Run tests inside the container
         id: docker-run-step
         run: docker run example-docker
-      - run: echo "time is; ${{ steps.docker-run-step.outputs.time}}"
+      - run: echo "Time from inside the docker container (printed outside the container) is; ${{ steps.docker-run-step.outputs.time}}"
         shell: bash
