--- a/.github/python-docker/Dockerfile
+++ b/.github/python-docker/Dockerfile
@@ -1,1 +1,10 @@
- 
+FROM ubuntu:latest
+
+RUN apt-get update
+RUN apt-get install -y python
+
+WORKDIR /home
+
+COPY test.py ./test.py
+
+ENTRYPOINT [ "python", "./test.py" ]
